Contacts no longer overlap with content

--- a/styleNew.css
+++ b/styleNew.css
@@ -56,7 +56,9 @@ nav {
     box-shadow: 0 0 80px rgba(0, 0, 0, .04);
 
     padding: 30px;
-    /* padding-top: 80px; */
+    padding-bottom: 80px;
+
+    position: relative;
 
     /* position: relative; */
 
